# moi-memory

./: .idd-mcp-learned-commands.json  .kbconfig.yaml  .mcp.json  README.md
kb/: PROJECT_STATUS.md  implementation_status.md  initial_prompt.md
kb/active/: RESILIENCE_FEATURES.md  SECURITY_FEATURES.md  implementation_progress.md  quick_wins.md  (+3 more)
knowledge-graph-mcp/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.override.yml  docker-compose.yml  env.example  quickstart.sh
knowledge-graph-mcp/config/: server_config.toml
knowledge-graph-mcp/scripts/: github-actions-ci.yml  github-actions-release.yml  install.sh  knowledge-graph-mcp.service
knowledge-graph-mcp/src/: backpressure_manager.rs  cache_degradation.rs  cache_manager.rs  circuit_breaker.rs  code_analyzer.rs  config.rs  connection_pool.rs  docker_manager.rs  errors.rs  knowledge_graph.rs  lib.rs  main.rs  mcp_server.rs  metrics.rs  nlp_patterns.rs  query_templates.rs  retry.rs  timeout_manager.rs  timeout_test.rs
knowledge-graph-mcp/src/monitoring/: alert_manager.rs  distributed_tracing.rs  health_monitor.rs  mod.rs
knowledge-graph-mcp/src/performance/: entity_cache.rs  memory_monitor.rs  mod.rs  parallel_executor.rs  query_cache.rs
knowledge-graph-mcp/src/security/: auth_manager.rs  config_encryption.rs  cypher_sanitizer.rs  mod.rs  rate_limiter.rs  request_validator.rs
knowledge-graph-mcp/src/vector_search/: embedding_engine.rs  mod.rs  similarity_search.rs
knowledge-graph-mcp/tests/: integration_tests.rs
knowledge-graph-mcp/tests/test_fixtures/: sample_project.rs
(+4 files in other folders)
