[package]
name = "knowledge-graph-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
neo4rs = "0.7"
redis = "0.24"
bollard = "0.15"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
walkdir = "2.3"
notify = "6.0"
toml = "0.8"
dotenv = "0.15"
chrono = "0.4"
regex = "1.10"
lazy_static = "1.4"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
hmac = "0.12"
jsonwebtoken = "9.0"
ring = "0.17"
gethostname = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"